using System.Collections.ObjectModel;

namespace BulletInBoardServer.Models.Announcements.Attachments;

public class Attachments : Collection<IAttachment>;